=== HEAD

* Add pg_array extension, for dealing with string and numeric PostgreSQL arrays (jeremyevans)

* Add Database#reset_conversion_procs to the postgres adapter, for use with extensions with modify default conversion procs (jeremyevans)

* Escape table and schema names when getting primary key or sequence information on PostgreSQL (jeremyevans)

* Escape identifiers when quoting on MySQL and SQLite (jeremyevans)

* Add Database#supports_drop_table_if_exists? for checking if DROP TABLE supports IF EXISTS (jeremyevans)

* Add Database#drop_table? for dropping a table if it already exists (jeremyevans)

* Log full SQL string by default for prepared statements created automatically by model prepared_statements* plugins (jeremyevans)

* Add ability for prepared statements to log full SQL string (jeremyevans)

* Add pg_statement_cache extension, for automatically preparing queries when using postgres adapter with pg driver (jeremyevans)

* Add pg_auto_parameterize extension, for automatically parameterizing queries when using postgres adapter with pg driver (jeremyevans)

* Add ConnectionPool#disconnection_proc= method, to modify disconnection_proc after the pool has been created (jeremyevans)

* Add ConnectionPool#after_connect= method, to modify after_connect proc after the pool has been created (jeremyevans)

* Add ConnectionPool#all_connections method, which yields all available connections in the pool (jeremyevans)

=== 3.33.0 (2012-03-01)

* Add ability to force or disable transactions completely in the migrators using the :use_transactions option (jeremyevans)

* Add ability to turn off transactions for migrations by calling no_transaction inside the Sequel.migration block (jeremyevans)

* Allow specifically choosing which migrator to use via TimestampMigrator.apply or IntegerMigrator.apply (jeremyevans)

* Add arbitrary_servers extension to allow the use of arbitrary servers/shards by providing a hash of options as the server (jeremyevans)
