@@ -1,5 +1,7 @@
 === HEAD
 
+* The typecast_on_load extension now works correctly when saving new model objects when insert_select is enabled (jeremyevans)
+
 * Add pg_array extension, for dealing with string and numeric PostgreSQL arrays (jeremyevans)
 
 * Add Database#reset_conversion_procs to the postgres adapter, for use with extensions with modify default conversion procs (jeremyevans)
